# proj

./: .editorconfig  .gitignore  .justfile-env.example  .parcelrc  README.md  babel.cfg  dump.rdb  eslint.config.js  flake.nix  justfile  package-lock.json  package.json  pm2.config.cjs  pyproject.toml  tailwind.config.js  tsconfig.json
.github/workflows/: server-deploy.yml
comp3030j/: __init__.py  extensions.py
comp3030j/api/: __init__.py  apikey_management.py  chatBot.py  data.py  decorators.py  graphql.py  profile.py  restful.py  security.py  user.py
comp3030j/auth/: __init__.py
comp3030j/dashboard/: __init__.py
comp3030j/db/: Profile.py  SEMSpot.py  Solar.py  Usage.py  User.py  __init__.py  apikey.py
comp3030j/static/: demo_2023.csv
comp3030j/static/api_doc/: restful.yaml
comp3030j/static/css/: main.css
comp3030j/static/others/: UCD.txt  UCD_2023_profile.csv  historical-irish-electricity-prices.csv
comp3030j/templates/: index.j2
comp3030j/tests/: test_chatBot.py
comp3030j/util/: __init__.py  cache.py  chatBot.py
comp3030j/views/: __init__.py  auth.py  chatbot.py  dashboard.py  index.py  landing.py  misc.py
comp3030j/views/auth/: __init__.py  auth.py
doc/: api.yaml  chart.md  chatBot.md  dev.md
instance/: config.py.example  schema.graphql
script/: data.json  initialize.py  parcel-packager-jinja.mjs  parcel-reporter-jinja.mjs  parcel-resolver-jinja.mjs  parse_csv_data.py  parse_json_data.py  tailwind
static/css/: aos.css  graphiql.css  input-number.css  main.tailwind.css  scrollbar.css  swagger-ui-dark.css
static/js/: auth.ts  constants.ts  dashboard.ts  landing.ts  landing_page.ts  main.example.js  main.ts  profile_edit.ts
static/js/api/: apikey.ts  data.ts  misc.ts  profile.ts  types.ts
static/js/chart/: 3D_dataset.js  3D_surface.js  basic.ts  chart.ts  common.ts  datasource.ts  electricity_consumption.js  his_irish_ele_prices.js  large_area_chart.js  line_chart.ts  pie_chart.ts
static/js/dashboard/: api_doc_graphql_playground.ts  api_doc_restful.ts  apikey_management.js  create_profile.ts  data_calculation.ts  electricity_usage_calculator.ts  google_map.js  index.ts  profile.ts  usage_update.ts  visual_price.ts  visual_usage.ts
static/js/lib/: animation.ts  chart.ts  input-number.ts  utils.ts
static/js/misc/: demo_chart.ts
templates/: base.j2  index.j2
templates/component/: input-number.j2  language-controller.j2  logo.j2  theme-controller.j2
templates/components/: theme-controller.j2
test_scripts/: README.md  data_sems.py  profile_saving.py  profile_solar.py  profile_usage.py  upload_usage.py
(+48 files in other folders)
